Fix bug to display links without gaps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,3 +68,8 @@ header {
     font-size: 0;
 }
 
+#nav li {
+    font-size: 14px;
+    padding: 0;
+}
+
